--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@line/liff": "^2.27.3",
     "@prisma/client": "^6.19.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "react": "19.2.3",
